@@ -9364,10 +9364,6 @@ id|priv
 op_assign
 id|pb-&gt;private_data
 suffix:semicolon
-id|priv-&gt;ctr_writable
-op_or_assign
-l_int|0x10
-suffix:semicolon
 r_if
 c_cond
 (paren
@@ -9485,18 +9481,6 @@ c_func
 (paren
 id|pb
 )paren
-suffix:semicolon
-r_if
-c_cond
-(paren
-id|pb-&gt;irq
-op_eq
-id|PARPORT_IRQ_NONE
-)paren
-id|priv-&gt;ctr_writable
-op_and_assign
-op_complement
-l_int|0x10
 suffix:semicolon
 r_return
 id|pb-&gt;irq
@@ -10109,6 +10093,10 @@ l_string|&quot;, irq %d&quot;
 comma
 id|p-&gt;irq
 )paren
+suffix:semicolon
+id|priv-&gt;ctr_writable
+op_or_assign
+l_int|0x10
 suffix:semicolon
 r_if
 c_cond
